# spotify-web-recommendations

./: .gitignore  package.json  pyproject.toml
backend/: README.md  main.py  package.json  processor.py  pyproject.toml  requirements.txt
frontend/: package.json
frontend/src/: App.css  App.jsx  App.tsx  frontend.tsx  index.css  index.html
frontend/src/components/: Demo.tsx  Features.tsx  Footer.tsx  Hero.tsx  Loading.tsx
frontend/src/components/Demo/: DropZone.tsx  Try.tsx
frontend/src/components/navigation/: Navbar.tsx
frontend/src/components/ui/: BentoGrid.tsx  Ripple.tsx  ShinyText.tsx  Sonner.tsx  SplitText.tsx
frontend/src/routes/: __root.tsx  demo.tsx  index.tsx
frontend/src/services/: api.ts  mutations.ts
frontend/styles/: globals.css
