[project]
name = "backend"
version = "0.1.0"
description = "Music and audio processing application built using vite + react + fastapi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
